Fixed the /companies, it was not returning all of them. Update /gl-accounts for better paging
